@@ -1,12 +1,8 @@
 package tasks;
 
 import common.Person;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -28,60 +24,55 @@ public class Task8 {
     if (persons.size() == 0) {
       return Collections.emptyList();
     }
-    persons.remove(0);
-    return persons.stream().map(Person::getFirstName).collect(Collectors.toList());
+    // сложность remove - О(n), skip O(1), он не меняет список, просто перешагивает первый эл-т
+    return persons.stream()
+            .skip(1)
+            .map(Person::getFirstName)
+            .toList();
   }
 
   //ну и различные имена тоже хочется
   public Set<String> getDifferentNames(List<Person> persons) {
-    return getNames(persons).stream().distinct().collect(Collectors.toSet());
+    // return getNames(persons).stream().distinct().collect(Collectors.toSet());
+    // distinct и toSet явно избыточны друг к другу, да и вообще давайте без стрима)
+    return new HashSet<>(getNames(persons));
   }
 
   //Для фронтов выдадим полное имя, а то сами не могут
   public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.getSecondName() != null) {
-      result += person.getSecondName();
-    }
-
-    if (person.getFirstName() != null) {
-      result += " " + person.getFirstName();
-    }
-
-    if (person.getSecondName() != null) {
-      result += " " + person.getSecondName();
-    }
-    return result;
+    // а тут лучше стримы
+    return Stream.of(person.getFirstName(), person.getSecondName())
+            .filter(Objects::nonNull)
+            .collect(Collectors.joining(" "));
   }
 
   // словарь id персоны -> ее имя
   public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.getId())) {
-        map.put(person.getId(), convertPersonToString(person));
-      }
-    }
-    return map;
+
+    return persons.stream()
+            .collect(Collectors.toMap(Person::getId, this::convertPersonToString,
+                    (person1, person2) -> person1));
   }
 
   // есть ли совпадающие в двух коллекциях персоны?
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
+    // предварительная проверка на пустоту коллеций, затем стрим
+    // Сложность по идее О(1), можно переписать на более красивое
+    // if (persons1.isEmpty() || persons2.isEmpty())
+    // тут точно О(1), так как размер коллекции записывается в свойствах
+    if (persons1 == null || persons2 == null) {
+      return false;
     }
-    return has;
+    return persons1.stream()
+            .anyMatch(persons2::contains);
   }
 
   //...
   public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+//    count = 0;
+//    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
+//    return count;
+    // Была введена избыточная переменная-счетчик
+    return numbers.filter(num -> num % 2 == 0).count();
   }
 }
